update plotting script

--- a/scripts/plot_data.ipynb
+++ b/scripts/plot_data.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "07aff18c",
    "metadata": {},
    "outputs": [
@@ -54,12 +54,10 @@
     "\n",
     "\n",
     "# experiment_names = ExperimentRegistry.keys()\n",
-    "\n",
     "experiment_names = [\"qwen_base\", \"qwen_fa3\", \"qwen_aot\", \"qwen_fa3_aot\", \"qwen_fa3_aot_int8\", \"qwen_fa3_aot_fp8\"]\n",
     "\n",
     "report_dir = ExperimentConfig().report_dir\n",
     "\n",
-    "# Load all CSV results\n",
     "all_results = []\n",
     "for name in experiment_names:\n",
     "    csv_path = report_dir / f\"{name}.csv\"\n",
@@ -420,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fac9587f",
    "metadata": {},
    "outputs": [
@@ -457,17 +455,11 @@
     "    plot_data = plot_data.sort_values('mean', ascending=False)\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "\n",
     "    x_pos = range(len(plot_data))\n",
-    "    \n",
-    "    # Get the maximum (slowest) time for percentage calculation\n",
     "    max_time = plot_data['mean'].max()\n",
     "\n",
-    "    # Plot bars with error bars\n",
     "    bars = ax.bar(x_pos, plot_data['mean'], yerr=plot_data['std'], \n",
     "                    capsize=12, alpha=0.7, edgecolor='black')\n",
-    "\n",
-    "    # Customize plot\n",
     "    ax.set_xlabel('Optimization Type', fontsize=12, fontweight='bold')\n",
     "    ax.set_ylabel('Time (s)', fontsize=12, fontweight='bold')\n",
     "    ax.set_title(f'Optimizations Comparison Over: {target}', \n",
@@ -477,7 +469,7 @@
     "                        rotation=45, ha='right', fontsize=12)\n",
     "    ax.grid(axis='y', alpha=0.3)\n",
     "\n",
-    "    # Add value labels on top of bars with percentage decrease\n",
+    "\n",
     "    for i, (idx, row) in enumerate(plot_data.iterrows()):        \n",
     "        ax.text(i - 0.2, row['mean'] + 0.01, f\"{row['mean']:.3f}s\", \n",
     "                ha='center', va='bottom', fontsize=12)\n",
@@ -490,7 +482,6 @@
     "\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # Save plot\n",
     "    plot_path = report_dir / f'{target}_performance_comparison.png'\n",
     "    plt.savefig(plot_path, dpi=300, bbox_inches='tight')\n",
     "\n",
@@ -499,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "eec1ec7e",
    "metadata": {},
    "outputs": [
@@ -552,33 +543,22 @@
     }
    ],
    "source": [
-    "# Create stacked bar plot\n",
     "stack_targets = [\"Preprocessing\", \"Encode Prompt\", \"Prep gen\", \"loop\", \"pre decode\", \"vae.decode\", \"post process\", \"offload\"]\n",
     "\n",
     "\n",
-    "\n",
-    "# Filter data for the target stages\n",
     "stack_data = combined_df[combined_df['name'].isin(stack_targets)].copy()\n",
-    "\n",
-    "# Pivot the data so experiments are rows and stages are columns\n",
     "pivot_data = stack_data.pivot(index='experiment', columns='name', values='mean')\n",
-    "\n",
-    "# Reorder columns to match the desired order\n",
     "pivot_data = pivot_data[stack_targets]\n",
-    "\n",
-    "# Sort by total time (highest to lowest)\n",
     "pivot_data['total'] = pivot_data.sum(axis=1)\n",
     "pivot_data = pivot_data.sort_values('total', ascending=False)\n",
     "pivot_data = pivot_data.drop('total', axis=1)\n",
     "\n",
-    "# Create the stacked bar plot\n",
-    "fig, ax = plt.subplots(figsize=(14, 7))\n",
     "\n",
-    "# Plot stacked bars\n",
+    "fig, ax = plt.subplots(figsize=(14, 7))\n",
     "pivot_data.plot(kind='bar', stacked=True, ax=ax, \n",
     "                colormap='viridis', edgecolor='black', capsize=12, alpha=0.7, width=0.8)\n",
     "\n",
-    "# Customize plot\n",
+    "\n",
     "ax.set_xlabel('Optimization Type', fontsize=12, fontweight='bold')\n",
     "ax.set_ylabel('Time (s)', fontsize=12, fontweight='bold')\n",
     "ax.set_title('Pipeline Time Breakdown by Optimization', \n",
@@ -587,33 +567,23 @@
     "ax.legend(title='Pipeline Stage', bbox_to_anchor=(1.05, 1), loc='upper left', fontsize=10)\n",
     "ax.grid(axis='y', alpha=0.3)\n",
     "\n",
-    "# Add total time labels on top of each bar with percentage improvement\n",
     "max_time = pivot_data.sum(axis=1).max()\n",
     "for i, (idx, row) in enumerate(pivot_data.iterrows()):\n",
     "    total = row.sum()\n",
     "    \n",
-    "    # Show time value\n",
     "    ax.text(i - 0.2, total + 0.01, f'{total:.3f}s', \n",
     "            ha='center', va='bottom', fontsize=12, fontweight='bold')\n",
     "    \n",
-    "\n",
     "    pct_decrease = ((max_time - total) / max_time) * 100\n",
     "    ax.text(i + 0.2, total + 0.01, f'(-{pct_decrease:.1f}%)', \n",
     "            ha='center', va='bottom', fontsize=12, color='green', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Save plot\n",
     "plot_path = report_dir / 'stacked_time_breakdown.png'\n",
     "plt.savefig(plot_path, dpi=300, bbox_inches='tight')\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "# Print summary table\n",
-    "print(\"\\n=== Time Breakdown Summary ===\")\n",
-    "print(pivot_data.round(3))\n",
-    "print(f\"\\nTotal times:\")\n",
-    "print(pivot_data.sum(axis=1).round(3))\n"
+    "plt.show()\n"
    ]
   },
   {
