--- a/scripts/visual_compare.ipynb
+++ b/scripts/visual_compare.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e5649df3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/Qwen-Image-Edit-Angles\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd /home/ubuntu/Qwen-Image-Edit-Angles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,53 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "Skipping import of cpp extensions due to incompatible torch version 2.9.1+cu128 for torchao version 0.14.1             Please see https://github.com/pytorch/ao/issues/2919 for more info\n",
-      "TMA benchmarks will be running without grid constant TMA descriptor.\n",
-      "2025-11-13 17:17:45.758469: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-13 17:17:45.772437: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1763054265.789504 1013472 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1763054265.795008 1013472 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1763054265.808263 1013472 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763054265.808277 1013472 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763054265.808280 1013472 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763054265.808281 1013472 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-11-13 17:17:45.812477: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 81555.91it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qwenimage.experiment import ExperimentConfig\n",
     "from qwenimage.experiments.experiments_qwen import ExperimentRegistry\n",
     "\n",
     "\n",
     "# experiment_names = ExperimentRegistry.keys()\n",
+    "# experiment_names = [\n",
+    "#     \"qwen_base\",\n",
+    "#     # \"qwen_fa3\",\n",
+    "#     # \"qwen_aot\",\n",
+    "#     # \"qwen_fa3_aot\",\n",
+    "#     # \"qwen_fa3_aot_int8\",\n",
+    "#     # \"qwen_fa3_aot_fp8\",\n",
+    "#     # \"qwen_fuse\",\n",
+    "#     \"qwen_base_3step\",\n",
+    "#     \"qwen_base_2step\",\n",
+    "#     \"qwen_lightning_lora\",\n",
+    "#     \"qwen_lightning_lora_3step\",\n",
+    "#     \"qwen_lightning_lora_2step\",\n",
+    "# ]\n",
+    "\n",
     "experiment_names = [\n",
-    "    \"qwen_base\",\n",
     "    # \"qwen_fa3\",\n",
     "    # \"qwen_aot\",\n",
     "    # \"qwen_fa3_aot\",\n",
-    "    # \"qwen_fa3_aot_int8\",\n",
-    "    # \"qwen_fa3_aot_fp8\",\n",
-    "    # \"qwen_fuse\",\n",
-    "    \"qwen_base_3step\",\n",
-    "    \"qwen_base_2step\",\n",
-    "    \"qwen_lightning_lora\",\n",
-    "    \"qwen_lightning_lora_3step\",\n",
-    "    \"qwen_lightning_lora_2step\",\n",
+    "    \"qwen_fa3_aot_int8\",\n",
+    "    \"qwen_fa3_aot_int8_fuse\",\n",
+    "    \"qwen_lightning_fa3_aot_int8_fuse\",\n",
+    "    # \"qwen_fa3_fuse\",\n",
+    "    \"qwen_fa3_aot_fp8\",\n",
+    "    \"qwen_fa3_aot_fp8_fuse\",\n",
+    "    \"qwen_lightning_fa3_aot_fp8_fuse\",\n",
+    "    \"qwen_lightning_fa3_aot_int8_fuse_2step\",\n",
+    "    \"qwen_base\",\n",
     "]\n",
     "\n",
     "report_dir = ExperimentConfig().report_dir\n",
@@ -94,21 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "29077eb8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('reports/qwen_base_outputs/000.jpg')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "experiment_outputs[\"qwen_base\"][0]"
    ]
@@ -117,6 +88,147 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a591fdd6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce90b6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "601aa246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa95f51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ded7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e09d431a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7ecb5a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e36dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "comparison_dir = report_dir / \"comparison_grid_2\"\n",
+    "comparison_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "\n",
+    "comparable_outputs = min(num_outputs.values())\n",
+    "num_experiments = len(experiment_names)\n",
+    "\n",
+    "# For each output index, create a comparison grid\n",
+    "for idx in range(comparable_outputs):\n",
+    "    cols = int(math.ceil(math.sqrt(num_experiments)))\n",
+    "    rows = int(math.ceil(num_experiments / cols ))\n",
+    "    \n",
+    "    fig, axes = plt.subplots(rows, cols, figsize=(6 * cols, 6 * rows))\n",
+    "    \n",
+    "    # Flatten axes array for easier indexing\n",
+    "    if num_experiments == 1:\n",
+    "        axes = np.array([axes])\n",
+    "    else:\n",
+    "        axes = axes.flatten() if isinstance(axes, np.ndarray) else np.array([axes])\n",
+    "    \n",
+    "    # Plot each experiment's output for this index\n",
+    "    for exp_idx, exp_name in enumerate(experiment_names):\n",
+    "        ax = axes[exp_idx]\n",
+    "        \n",
+    "        # Check if this experiment has an output at this index\n",
+    "        if idx < num_outputs[exp_name]:\n",
+    "            img_path = experiment_outputs[exp_name][idx]\n",
+    "            img = Image.open(img_path)\n",
+    "            ax.imshow(img)\n",
+    "            ax.set_title(exp_name, fontsize=14, fontweight='bold')\n",
+    "        else:\n",
+    "            # No output for this experiment at this index\n",
+    "            ax.text(0.5, 0.5, 'N/A', ha='center', va='center', fontsize=20)\n",
+    "            ax.set_title(exp_name, fontsize=14, fontweight='bold', color='gray')\n",
+    "        \n",
+    "        ax.axis('off')\n",
+    "    \n",
+    "    # Hide any unused subplots\n",
+    "    for exp_idx in range(num_experiments, len(axes)):\n",
+    "        axes[exp_idx].axis('off')\n",
+    "    \n",
+    "    # Add a main title for the figure\n",
+    "    fig.suptitle(f'Output Comparison - Index {idx:03d}', fontsize=18, fontweight='bold', y=0.98)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save the figure\n",
+    "    output_path = comparison_dir / f\"comparison_{idx:03d}.jpg\"\n",
+    "    plt.savefig(output_path, dpi=150, bbox_inches='tight')\n",
+    "    plt.close(fig)\n",
+    "    \n",
+    "    print(f\"Saved comparison grid {idx + 1}/{comparable_outputs} to {output_path}\")\n",
+    "\n",
+    "print(f\"\\nAll comparison grids saved to {comparison_dir}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "406c9749",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "244dfe0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,198 +344,6 @@
     "print(\"LPIPS Analysis Complete!\")\n",
     "print(\"=\"*60)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce90b6d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "601aa246",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing rFID for qwen_base...\n",
-      "Calculating rFID: 4-step vs 3-step...\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aa95f51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30ded7b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e09d431a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7ecb5a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "41e36dc8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved comparison grid 1/32 to reports/comparison_grid/comparison_000.jpg\n",
-      "Saved comparison grid 2/32 to reports/comparison_grid/comparison_001.jpg\n",
-      "Saved comparison grid 3/32 to reports/comparison_grid/comparison_002.jpg\n",
-      "Saved comparison grid 4/32 to reports/comparison_grid/comparison_003.jpg\n",
-      "Saved comparison grid 5/32 to reports/comparison_grid/comparison_004.jpg\n",
-      "Saved comparison grid 6/32 to reports/comparison_grid/comparison_005.jpg\n",
-      "Saved comparison grid 7/32 to reports/comparison_grid/comparison_006.jpg\n",
-      "Saved comparison grid 8/32 to reports/comparison_grid/comparison_007.jpg\n",
-      "Saved comparison grid 9/32 to reports/comparison_grid/comparison_008.jpg\n",
-      "Saved comparison grid 10/32 to reports/comparison_grid/comparison_009.jpg\n",
-      "Saved comparison grid 11/32 to reports/comparison_grid/comparison_010.jpg\n",
-      "Saved comparison grid 12/32 to reports/comparison_grid/comparison_011.jpg\n",
-      "Saved comparison grid 13/32 to reports/comparison_grid/comparison_012.jpg\n",
-      "Saved comparison grid 14/32 to reports/comparison_grid/comparison_013.jpg\n",
-      "Saved comparison grid 15/32 to reports/comparison_grid/comparison_014.jpg\n",
-      "Saved comparison grid 16/32 to reports/comparison_grid/comparison_015.jpg\n",
-      "Saved comparison grid 17/32 to reports/comparison_grid/comparison_016.jpg\n",
-      "Saved comparison grid 18/32 to reports/comparison_grid/comparison_017.jpg\n",
-      "Saved comparison grid 19/32 to reports/comparison_grid/comparison_018.jpg\n",
-      "Saved comparison grid 20/32 to reports/comparison_grid/comparison_019.jpg\n",
-      "Saved comparison grid 21/32 to reports/comparison_grid/comparison_020.jpg\n",
-      "Saved comparison grid 22/32 to reports/comparison_grid/comparison_021.jpg\n",
-      "Saved comparison grid 23/32 to reports/comparison_grid/comparison_022.jpg\n",
-      "Saved comparison grid 24/32 to reports/comparison_grid/comparison_023.jpg\n",
-      "Saved comparison grid 25/32 to reports/comparison_grid/comparison_024.jpg\n",
-      "Saved comparison grid 26/32 to reports/comparison_grid/comparison_025.jpg\n",
-      "Saved comparison grid 27/32 to reports/comparison_grid/comparison_026.jpg\n",
-      "Saved comparison grid 28/32 to reports/comparison_grid/comparison_027.jpg\n",
-      "Saved comparison grid 29/32 to reports/comparison_grid/comparison_028.jpg\n",
-      "Saved comparison grid 30/32 to reports/comparison_grid/comparison_029.jpg\n",
-      "Saved comparison grid 31/32 to reports/comparison_grid/comparison_030.jpg\n",
-      "Saved comparison grid 32/32 to reports/comparison_grid/comparison_031.jpg\n",
-      "\n",
-      "All comparison grids saved to reports/comparison_grid\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "\n",
-    "comparison_dir = report_dir / \"comparison_grid\"\n",
-    "comparison_dir.mkdir(exist_ok=True, parents=True)\n",
-    "\n",
-    "\n",
-    "comparable_outputs = min(num_outputs.values())\n",
-    "num_experiments = len(experiment_names)\n",
-    "\n",
-    "# For each output index, create a comparison grid\n",
-    "for idx in range(comparable_outputs):\n",
-    "    cols = int(math.ceil(math.sqrt(num_experiments)))\n",
-    "    rows = int(math.ceil(num_experiments / cols ))\n",
-    "    \n",
-    "    fig, axes = plt.subplots(rows, cols, figsize=(6 * cols, 6 * rows))\n",
-    "    \n",
-    "    # Flatten axes array for easier indexing\n",
-    "    if num_experiments == 1:\n",
-    "        axes = np.array([axes])\n",
-    "    else:\n",
-    "        axes = axes.flatten() if isinstance(axes, np.ndarray) else np.array([axes])\n",
-    "    \n",
-    "    # Plot each experiment's output for this index\n",
-    "    for exp_idx, exp_name in enumerate(experiment_names):\n",
-    "        ax = axes[exp_idx]\n",
-    "        \n",
-    "        # Check if this experiment has an output at this index\n",
-    "        if idx < num_outputs[exp_name]:\n",
-    "            img_path = experiment_outputs[exp_name][idx]\n",
-    "            img = Image.open(img_path)\n",
-    "            ax.imshow(img)\n",
-    "            ax.set_title(exp_name, fontsize=14, fontweight='bold')\n",
-    "        else:\n",
-    "            # No output for this experiment at this index\n",
-    "            ax.text(0.5, 0.5, 'N/A', ha='center', va='center', fontsize=20)\n",
-    "            ax.set_title(exp_name, fontsize=14, fontweight='bold', color='gray')\n",
-    "        \n",
-    "        ax.axis('off')\n",
-    "    \n",
-    "    # Hide any unused subplots\n",
-    "    for exp_idx in range(num_experiments, len(axes)):\n",
-    "        axes[exp_idx].axis('off')\n",
-    "    \n",
-    "    # Add a main title for the figure\n",
-    "    fig.suptitle(f'Output Comparison - Index {idx:03d}', fontsize=18, fontweight='bold', y=0.98)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    \n",
-    "    # Save the figure\n",
-    "    output_path = comparison_dir / f\"comparison_{idx:03d}.jpg\"\n",
-    "    plt.savefig(output_path, dpi=150, bbox_inches='tight')\n",
-    "    plt.close(fig)\n",
-    "    \n",
-    "    print(f\"Saved comparison grid {idx + 1}/{comparable_outputs} to {output_path}\")\n",
-    "\n",
-    "print(f\"\\nAll comparison grids saved to {comparison_dir}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "406c9749",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "244dfe0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
