add only fuse, channels last, autoencoder

--- a/scripts/plot_data.ipynb
+++ b/scripts/plot_data.ipynb
@@ -37,6 +37,7 @@
     "    \"qwen_base\",\n",
     "    \"qwen_fa3\",\n",
     "    \"qwen_aot\",\n",
+    "    \"qwen_fuse\",\n",
     "    \"qwen_fa3_aot\",\n",
     "    # \"qwen_fa3_aot_int8\",\n",
     "    \"qwen_fa3_aot_fp8\",\n",
