--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -578,11 +578,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e81b77e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7294921875"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "e = torch.rand((1, 253, 3584), dtype=torch.bfloat16)\n",
+    "e.numel() * e.element_size() / (1024 ** 2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -590,7 +606,26 @@
    "id": "e571d339",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mvae_params = sum(p.numel() for p in flux.blend_model.mvae.parameters())\n",
+    "model_size_mb = sum(p.numel() * p.element_size() for p in flux.blend_model.mvae.parameters()) / (1024 ** 2)\n",
+    "print(f\"mvae parameter count: {mvae_params:,}\")\n",
+    "print(f\"mvae model size: {model_size_mb:.2f} MB\")\n",
+    "\n",
+    "transformer_params = sum(p.numel() for p in flux.transformer.parameters())\n",
+    "model_size_mb = sum(p.numel() * p.element_size() for p in flux.transformer.parameters()) / (1024 ** 2)\n",
+    "print(f\"flux.transformer parameter count: {transformer_params:,}\")\n",
+    "print(f\"flux.transformer model size: {model_size_mb:.2f} MB\")\n",
+    "\n",
+    "vae_params = sum(p.numel() for p in flux.vae.parameters())\n",
+    "model_size_mb = sum(p.numel() * p.element_size() for p in flux.vae.parameters()) / (1024 ** 2)\n",
+    "print(f\"flux.vae parameter count: {vae_params:,}\")\n",
+    "print(f\"flux.vae model size: {model_size_mb:.2f} MB\")\n",
+    "\n",
+    "print(f\"\\nParameter comparisons:\")\n",
+    "print(f\"mvae vs transformer: {mvae_params / transformer_params * 100:.3f}%\")\n",
+    "print(f\"mvae vs vae: {mvae_params / vae_params * 100:.3f}%\")\n"
+   ]
   },
   {
    "cell_type": "code",
