--- a/scripts/visual_compare.ipynb
+++ b/scripts/visual_compare.ipynb
@@ -33,18 +33,18 @@
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
       "Skipping import of cpp extensions due to incompatible torch version 2.9.1+cu128 for torchao version 0.14.1             Please see https://github.com/pytorch/ao/issues/2919 for more info\n",
       "TMA benchmarks will be running without grid constant TMA descriptor.\n",
-      "2025-11-15 00:25:52.163576: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-15 00:25:52.177532: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-11-15 00:36:46.660289: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-15 00:36:46.674159: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1763166352.194580 1401631 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1763166352.200097 1401631 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1763166352.213216 1401631 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763166352.213231 1401631 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763166352.213234 1401631 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763166352.213235 1401631 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-11-15 00:25:52.217652: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1763167006.691103 1407426 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1763167006.696561 1407426 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1763167006.709712 1407426 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763167006.709728 1407426 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763167006.709731 1407426 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763167006.709732 1407426 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-11-15 00:36:46.713796: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 80659.69it/s]\n"
+      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 77467.36it/s]\n"
      ]
     }
    ],
@@ -68,6 +68,7 @@
     "experiment_names = [\n",
     "    \"qwen_base\",\n",
     "    \"qwen_lightning_fa3_aot_int8_fuse_4step_fbcache_055_downsize512\",\n",
+    "    \"qwen_lightning_fa3_aot_int8_fuse_2step_fbcache_055_downsize512\",\n",
     "    \"qwen_lightning_fa3_aot_int8_fuse_1step_fbcache_055_downsize512\",\n",
     "]\n",
     "\n",
@@ -187,40 +188,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved comparison grid 1/32 to reports/comparison_grid_4/comparison_000.jpg\n",
-      "Saved comparison grid 2/32 to reports/comparison_grid_4/comparison_001.jpg\n",
-      "Saved comparison grid 3/32 to reports/comparison_grid_4/comparison_002.jpg\n",
-      "Saved comparison grid 4/32 to reports/comparison_grid_4/comparison_003.jpg\n",
-      "Saved comparison grid 5/32 to reports/comparison_grid_4/comparison_004.jpg\n",
-      "Saved comparison grid 6/32 to reports/comparison_grid_4/comparison_005.jpg\n",
-      "Saved comparison grid 7/32 to reports/comparison_grid_4/comparison_006.jpg\n",
-      "Saved comparison grid 8/32 to reports/comparison_grid_4/comparison_007.jpg\n",
-      "Saved comparison grid 9/32 to reports/comparison_grid_4/comparison_008.jpg\n",
-      "Saved comparison grid 10/32 to reports/comparison_grid_4/comparison_009.jpg\n",
-      "Saved comparison grid 11/32 to reports/comparison_grid_4/comparison_010.jpg\n",
-      "Saved comparison grid 12/32 to reports/comparison_grid_4/comparison_011.jpg\n",
-      "Saved comparison grid 13/32 to reports/comparison_grid_4/comparison_012.jpg\n",
-      "Saved comparison grid 14/32 to reports/comparison_grid_4/comparison_013.jpg\n",
-      "Saved comparison grid 15/32 to reports/comparison_grid_4/comparison_014.jpg\n",
-      "Saved comparison grid 16/32 to reports/comparison_grid_4/comparison_015.jpg\n",
-      "Saved comparison grid 17/32 to reports/comparison_grid_4/comparison_016.jpg\n",
-      "Saved comparison grid 18/32 to reports/comparison_grid_4/comparison_017.jpg\n",
-      "Saved comparison grid 19/32 to reports/comparison_grid_4/comparison_018.jpg\n",
-      "Saved comparison grid 20/32 to reports/comparison_grid_4/comparison_019.jpg\n",
-      "Saved comparison grid 21/32 to reports/comparison_grid_4/comparison_020.jpg\n",
-      "Saved comparison grid 22/32 to reports/comparison_grid_4/comparison_021.jpg\n",
-      "Saved comparison grid 23/32 to reports/comparison_grid_4/comparison_022.jpg\n",
-      "Saved comparison grid 24/32 to reports/comparison_grid_4/comparison_023.jpg\n",
-      "Saved comparison grid 25/32 to reports/comparison_grid_4/comparison_024.jpg\n",
-      "Saved comparison grid 26/32 to reports/comparison_grid_4/comparison_025.jpg\n",
-      "Saved comparison grid 27/32 to reports/comparison_grid_4/comparison_026.jpg\n",
-      "Saved comparison grid 28/32 to reports/comparison_grid_4/comparison_027.jpg\n",
-      "Saved comparison grid 29/32 to reports/comparison_grid_4/comparison_028.jpg\n",
-      "Saved comparison grid 30/32 to reports/comparison_grid_4/comparison_029.jpg\n",
-      "Saved comparison grid 31/32 to reports/comparison_grid_4/comparison_030.jpg\n",
-      "Saved comparison grid 32/32 to reports/comparison_grid_4/comparison_031.jpg\n",
+      "Saved comparison grid 1/32 to reports/comparison_grid_5/comparison_000.jpg\n",
+      "Saved comparison grid 2/32 to reports/comparison_grid_5/comparison_001.jpg\n",
+      "Saved comparison grid 3/32 to reports/comparison_grid_5/comparison_002.jpg\n",
+      "Saved comparison grid 4/32 to reports/comparison_grid_5/comparison_003.jpg\n",
+      "Saved comparison grid 5/32 to reports/comparison_grid_5/comparison_004.jpg\n",
+      "Saved comparison grid 6/32 to reports/comparison_grid_5/comparison_005.jpg\n",
+      "Saved comparison grid 7/32 to reports/comparison_grid_5/comparison_006.jpg\n",
+      "Saved comparison grid 8/32 to reports/comparison_grid_5/comparison_007.jpg\n",
+      "Saved comparison grid 9/32 to reports/comparison_grid_5/comparison_008.jpg\n",
+      "Saved comparison grid 10/32 to reports/comparison_grid_5/comparison_009.jpg\n",
+      "Saved comparison grid 11/32 to reports/comparison_grid_5/comparison_010.jpg\n",
+      "Saved comparison grid 12/32 to reports/comparison_grid_5/comparison_011.jpg\n",
+      "Saved comparison grid 13/32 to reports/comparison_grid_5/comparison_012.jpg\n",
+      "Saved comparison grid 14/32 to reports/comparison_grid_5/comparison_013.jpg\n",
+      "Saved comparison grid 15/32 to reports/comparison_grid_5/comparison_014.jpg\n",
+      "Saved comparison grid 16/32 to reports/comparison_grid_5/comparison_015.jpg\n",
+      "Saved comparison grid 17/32 to reports/comparison_grid_5/comparison_016.jpg\n",
+      "Saved comparison grid 18/32 to reports/comparison_grid_5/comparison_017.jpg\n",
+      "Saved comparison grid 19/32 to reports/comparison_grid_5/comparison_018.jpg\n",
+      "Saved comparison grid 20/32 to reports/comparison_grid_5/comparison_019.jpg\n",
+      "Saved comparison grid 21/32 to reports/comparison_grid_5/comparison_020.jpg\n",
+      "Saved comparison grid 22/32 to reports/comparison_grid_5/comparison_021.jpg\n",
+      "Saved comparison grid 23/32 to reports/comparison_grid_5/comparison_022.jpg\n",
+      "Saved comparison grid 24/32 to reports/comparison_grid_5/comparison_023.jpg\n",
+      "Saved comparison grid 25/32 to reports/comparison_grid_5/comparison_024.jpg\n",
+      "Saved comparison grid 26/32 to reports/comparison_grid_5/comparison_025.jpg\n",
+      "Saved comparison grid 27/32 to reports/comparison_grid_5/comparison_026.jpg\n",
+      "Saved comparison grid 28/32 to reports/comparison_grid_5/comparison_027.jpg\n",
+      "Saved comparison grid 29/32 to reports/comparison_grid_5/comparison_028.jpg\n",
+      "Saved comparison grid 30/32 to reports/comparison_grid_5/comparison_029.jpg\n",
+      "Saved comparison grid 31/32 to reports/comparison_grid_5/comparison_030.jpg\n",
+      "Saved comparison grid 32/32 to reports/comparison_grid_5/comparison_031.jpg\n",
       "\n",
-      "All comparison grids saved to reports/comparison_grid_4\n"
+      "All comparison grids saved to reports/comparison_grid_5\n"
      ]
     }
    ],
@@ -237,7 +238,7 @@
     "font_path = Path(\"scripts/assets/STSong.ttf\")\n",
     "chinese_font = fm.FontProperties(fname=str(font_path))\n",
     "\n",
-    "comparison_dir = report_dir / \"comparison_grid_4\"\n",
+    "comparison_dir = report_dir / \"comparison_grid_5\"\n",
     "comparison_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "# Create PipeInputs instance to access original images and prompts\n",
